; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/intel/skylake/extr_skl-pcm.c_skl_be_hw_params.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/intel/skylake/extr_skl-pcm.c_skl_be_hw_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pcm_substream = type { i32 }
%struct.snd_pcm_hw_params = type { i32 }
%struct.snd_soc_dai = type { i32 }
%struct.skl_pipe_params = type { i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_pcm_substream*, %struct.snd_pcm_hw_params*, %struct.snd_soc_dai*)* @skl_be_hw_params to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @skl_be_hw_params(%struct.snd_pcm_substream* %0, %struct.snd_pcm_hw_params* %1, %struct.snd_soc_dai* %2) #0 {
  %4 = alloca %struct.snd_pcm_substream*, align 8
  %5 = alloca %struct.snd_pcm_hw_params*, align 8
  %6 = alloca %struct.snd_soc_dai*, align 8
  %7 = alloca %struct.skl_pipe_params, align 4
  store %struct.snd_pcm_substream* %0, %struct.snd_pcm_substream** %4, align 8
  store %struct.snd_pcm_hw_params* %1, %struct.snd_pcm_hw_params** %5, align 8
  store %struct.snd_soc_dai* %2, %struct.snd_soc_dai** %6, align 8
  %8 = bitcast %struct.skl_pipe_params* %7 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %8, i8 0, i64 20, i1 false)
  %9 = load %struct.snd_pcm_hw_params*, %struct.snd_pcm_hw_params** %5, align 8
  %10 = call i32 @params_format(%struct.snd_pcm_hw_params* %9)
  %11 = call i32 @snd_pcm_format_width(i32 %10)
  %12 = getelementptr inbounds %struct.skl_pipe_params, %struct.skl_pipe_params* %7, i32 0, i32 3
  store i32 %11, i32* %12, align 4
  %13 = load %struct.snd_pcm_hw_params*, %struct.snd_pcm_hw_params** %5, align 8
  %14 = call i32 @params_channels(%struct.snd_pcm_hw_params* %13)
  %15 = getelementptr inbounds %struct.skl_pipe_params, %struct.skl_pipe_params* %7, i32 0, i32 2
  store i32 %14, i32* %15, align 4
  %16 = load %struct.snd_pcm_hw_params*, %struct.snd_pcm_hw_params** %5, align 8
  %17 = call i32 @params_rate(%struct.snd_pcm_hw_params* %16)
  %18 = getelementptr inbounds %struct.skl_pipe_params, %struct.skl_pipe_params* %7, i32 0, i32 1
  store i32 %17, i32* %18, align 4
  %19 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %4, align 8
  %20 = getelementptr inbounds %struct.snd_pcm_substream, %struct.snd_pcm_substream* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = getelementptr inbounds %struct.skl_pipe_params, %struct.skl_pipe_params* %7, i32 0, i32 0
  store i32 %21, i32* %22, align 4
  %23 = load %struct.snd_soc_dai*, %struct.snd_soc_dai** %6, align 8
  %24 = call i32 @skl_tplg_be_update_params(%struct.snd_soc_dai* %23, %struct.skl_pipe_params* %7)
  ret i32 %24
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @snd_pcm_format_width(i32) #2

declare dso_local i32 @params_format(%struct.snd_pcm_hw_params*) #2

declare dso_local i32 @params_channels(%struct.snd_pcm_hw_params*) #2

declare dso_local i32 @params_rate(%struct.snd_pcm_hw_params*) #2

declare dso_local i32 @skl_tplg_be_update_params(%struct.snd_soc_dai*, %struct.skl_pipe_params*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
